--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,28 +10,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignInActivity"
+        <activity android:name=".product.ProductActivity"></activity>
+        <activity
+            android:name=".SignInActivity"
             android:configChanges="orientation|smallestScreenSize|screenSize|screenLayout"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity" >
-
-        </activity>
-        <activity android:name=".WelcomeActivity"
+            tools:ignore="LockedOrientationActivity"></activity>
+        <activity
+            android:name=".WelcomeActivity"
+            android:configChanges="orientation|smallestScreenSize|screenSize|screenLayout"
+            android:screenOrientation="portrait"
             android:theme="@style/FullScreen"
-            android:configChanges="orientation|smallestScreenSize|screenSize|screenLayout"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity" >
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".home.MainActivity"   android:configChanges="orientation|smallestScreenSize|screenSize|screenLayout"
+        <activity
+            android:name=".home.MainActivity"
+            android:configChanges="orientation|smallestScreenSize|screenSize|screenLayout"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity" >
-
-        </activity>
+            tools:ignore="LockedOrientationActivity"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
