--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
-
+        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.google.gms:google-services:4.3.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -14,12 +14,15 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "http://dl.bintray.com/populov/maven" }
+        maven { url "https://jitpack.io" } // For U crop
+        maven { url "https://maven.google.com" } // Google's Maven repository - FCM
+        maven {
+            url 'https://dl.bintray.com/azeesoft/maven'
+        }
         google()
         jcenter()
         mavenCentral()
-        maven {
-            url "https://jitpack.io"
-        }
     }
 }
 
